{
  "version": 4,
  "terraform_version": "1.6.4",
  "serial": 29,
  "lineage": "e689163b-6983-7a94-46e6-e4bb9b047665",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "test_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0361bbf2b99f46c1d",
            "arn": "arn:aws:ec2:ap-southeast-2:084825817586:instance/i-090d1cb8ed55b3d1f",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-090d1cb8ed55b3d1f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05408ef966104d4bf",
            "private_dns": "ip-10-1-1-33.ap-southeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.33",
            "public_ip": "54.253.178.192",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-040929b42585f441b",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f06f64299e73dffb",
            "tags": {
              "Name": "test_server"
            },
            "tags_all": {
              "Name": "test_server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bb5fea336587b692"
            ]
          },
          "dependencies": [
            "aws_security_group.ap-southeast-2-VPC1-SG1",
            "aws_subnet.ap-southeast-2a-VPC2-subnet-private1",
            "aws_vpc.ap-southeast-2-VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ap-southeast-2-IG1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:084825817586:internet-gateway/igw-0c6dda86bda4328f4",
            "id": "igw-0c6dda86bda4328f4",
            "owner_id": "084825817586",
            "tags": {
              "Name": "ap-southeast-2-IG1"
            },
            "tags_all": {
              "Name": "ap-southeast-2-IG1"
            },
            "vpc_id": "vpc-009fd4f902418b863"
          },
          "dependencies": [
            "aws_vpc.ap-southeast-2-VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ap-southeast-2a-VPC2-route-public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:084825817586:route-table/rtb-0f23b914e2835c12c",
            "id": "rtb-0f23b914e2835c12c",
            "owner_id": "084825817586",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c6dda86bda4328f4",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "VPC2-route-public1"
            },
            "tags_all": {
              "Name": "VPC2-route-public1"
            },
            "timeouts": null,
            "vpc_id": "vpc-009fd4f902418b863"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ap-southeast-2-IG1",
            "aws_vpc.ap-southeast-2-VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0482cba254c5a6ad8",
            "route_table_id": "rtb-0f23b914e2835c12c",
            "subnet_id": "subnet-0f06f64299e73dffb"
          },
          "dependencies": [
            "aws_internet_gateway.ap-southeast-2-IG1",
            "aws_route_table.ap-southeast-2a-VPC2-route-public1",
            "aws_subnet.ap-southeast-2a-VPC2-subnet-private1",
            "aws_vpc.ap-southeast-2-VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ap-southeast-2-VPC1-SG1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:084825817586:security-group/sg-0bb5fea336587b692",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0bb5fea336587b692",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Ingress HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Ingress SSH",
                "from_port": 20,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 20
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Ingress ICMP",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              }
            ],
            "name": "sg",
            "name_prefix": "",
            "owner_id": "084825817586",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-009fd4f902418b863"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ap-southeast-2-VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ap-southeast-2a-VPC2-subnet-private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:084825817586:subnet/subnet-0f06f64299e73dffb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f06f64299e73dffb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "084825817586",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC1-2A-subnet-private1"
            },
            "tags_all": {
              "Name": "VPC1-2A-subnet-private1"
            },
            "vpc_id": "vpc-009fd4f902418b863"
          },
          "dependencies": [
            "aws_vpc.ap-southeast-2-VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ap-southeast-2-VPC1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:084825817586:vpc/vpc-009fd4f902418b863",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0e569d7402c8826a8",
            "default_route_table_id": "rtb-025aec8cac82109c2",
            "default_security_group_id": "sg-0485472caed2d7f64",
            "dhcp_options_id": "dopt-00df8d9d4a24b008f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-009fd4f902418b863",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-025aec8cac82109c2",
            "owner_id": "084825817586",
            "tags": {
              "Name": "ap-southeast-2-VPC1"
            },
            "tags_all": {
              "Name": "ap-southeast-2-VPC1"
            }
          }
        }
      ]
    }
  ]
}